<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_item_attachment"
            android:checked="true"
            android:icon="@drawable/ic_attachment"
            android:title="@string/drawer_item1" />
        <item
            android:id="@+id/navigation_item_images"
            android:icon="@drawable/ic_image"
            android:title="@string/drawer_item2" />
        <item
            android:id="@+id/navigation_item_location"
            android:icon="@drawable/ic_place"
            android:title="@string/drawer_item3" />
    </group>

    <item android:title="@string/drawer_sub_group">
        <menu>
            <item
                android:icon="@drawable/ic_emoticon"
                android:title="@string/drawer_sub_item1" />
            <item
                android:icon="@drawable/ic_emoticon"
                android:title="@string/drawer_sub_item1" />
        </menu>
    </item>

</menu>